replaced fbsmp with cqs

--- a/index.html
+++ b/index.html
@@ -144,19 +144,19 @@
                 </div>
                 <div id="proj2" class="col-sm">
                   <div class="card p-0">
-                    <img src="fbl.png" class="img-fluid rounded-top" alt="reload page pls">
+                    <img src="cqs-img.png" class="img-fluid rounded-top" alt="reload page pls">
                     <div class="content">
                       <div class="rud-card-sub-height">
                         <div class="content-title">
-                          Freebird SMP
+                          Custom Query Stats
                         </div>
                         <div class="text-muted">
-                          A small, invite-only RP Minecraft server made for <a href="https://discord.com/invite/MDxRZCx">this Discord server</a>.
+                          A niche Spigot plugin allowing a query of a server to return player statistics.
                         </div>
                         <div class="rud-spacer-sm"></div>
                       </div>
                       <div id="proj2-button" class="text-right" xyz="left-50% fade ease">
-                        <a href="./freebirdsmp/" class="btn btn-primary btn-rounded">Learn more</a>
+                        <a href="./cqs/" class="btn btn-primary btn-rounded">Learn more</a>
                       </div>
                     </div>
                   </div>
