url redirection and refactoring

--- a/fptheory/redirect.html
+++ b/fptheory/redirect.html
@@ -5,7 +5,7 @@
       Redirecting...
     </title>
     <script>
-      window.location.href = "";
+      window.location.href = "../old/fptheory/";
     </script>
   </head>
 </html>
