--- a/old/fptheory/index.html
+++ b/old/fptheory/index.html
@@ -5,6 +5,8 @@
     </title>
   </head>
   <body>
+    <h1>Hey, this theory is up on <a href="../ttm/">my theory website</a>! While I will be leaving this page up for archival purposes, I recommend checking it out for a better experience.</h1>
+    <hr>
     <h1>
       Colin's True Purpose
     </h1>
