--- a/ttm/index.html
+++ b/ttm/index.html
@@ -12,7 +12,7 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta name="keywords" content="rudrecciah, freebird games, rud recciah, rud, recciah, to the moon wiki, to the moon, finding paradise, theory, theory wiki, to the moon theory wiki, ttm theory wiki, ttm wiki" />
-    <meta name="description" content="description here" />
+    <meta name="description" content="The home for all theories about the To The Moon series." />
     <meta name="author" content="RudRecciah" />
     <!-- Favicon and title -->
     <link rel="icon" href="./img/icon.ico">
