changed some text on theory submit modal

--- a/ttm/index.html
+++ b/ttm/index.html
@@ -74,7 +74,7 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
                     <option value="9">Impostor Factory</option>
                   </select>
                   <div class="form-text">
-                    Choose one or more tags for people to search for your theory by.
+                    Choose one or more tags for people to search for your theory by. Hold <kbd>Shift</kbd> or <kbd>Control</kbd> to choose multiple tags.
                   </div>
                 </div>
                 <div class="form-group">
