fixed bottom spacing

--- a/ttm/index.html
+++ b/ttm/index.html
@@ -160,6 +160,9 @@ Any attempt to misuse or repurpose this code in a way which leaves a lasting den
               <div id="modal-theory-content">
                 <p>This is a cool theory. It is so amazing and correct and the writer is so smart. Kan Gao lives in fear of this writer and their works daily.</p>
               </div>
+              <div class="spacer-lg"></div>
+              <div class="spacer-lg"></div>
+              <div class="spacer-lg"></div>
             </div>
           </div>
         </div>
