--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="w-1000 m-auto">
               <div xyz="fade flip-down stagger duration-10 delay-2 ease-out-back">
                 <p id="about" class="text-center">
-                  I'm a pink parrot with development skills. I code in Java, HTML, JS, and CSS. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic <strong>GAMER</strong> spending his days playing competitive Minecraft and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the server Endcraft and it's forks with <a href="https://eerie.ml/">EerieDEV</a>. Currently, I'm learning how to build Discord bots in JS, and may release a few in the future.
+                  I'm a pink parrot with development skills. I code in Java, HTML, JS, and CSS. I've been developing for the past three years, working on various projects mostly in Java. I'm an epic <strong>GAMER</strong> spending his days playing competitive Minecraft and being on do not disturb on Discord. I've mostly worked on Minecraft related projects, most notably the server Endcraft and it's forks with <a href="https://eerie.ml/">EerieDEV</a>. Currently, I'm learning how to build Discord bots in Python, and may release a few in the future.
                 </p>
               </div>
             </div>
